--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "build": "remix vite:build",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "typecheck": "tsc",
-    "serve": "node server.js"
+    "typecheck": "tsc"
   },
   "dependencies": {
+    "@cabezonidas/react-splitter": "^1.6.4",
     "@remix-run/express": "^2.12.1",
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
+    "@remix-run/css-bundle": "^2.12.1",
     "cross-env": "^7.0.3",
     "express": "^4.21.0",
     "isbot": "^4.1.0",
